generated/FlightParser.js
// Generated from Flight.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import FlightListener from './FlightListener.js';
import FlightVisitor from './FlightVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class FlightParser extends antlr4.Parser {

    static grammarFileName = "Flight.g4";
    static literalNames = [ null, "'-'", "','", "'Gate:'", "'ON_TIME'", 
                            "'DELAYED'", "'CANCELLED'" ];
    static symbolicNames = [ null, null, null, null, "ON_TIME", "DELAYED", 
                             "CANCELLED", "HORA", "LETRA", "DIGITO", "WS" ];
    static ruleNames = [ "vuelo", "codigo_vuelo", "aeropuerto", "hora", 
                         "estado", "puerta" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FlightParser.ruleNames;
        this.literalNames = FlightParser.literalNames;
        this.symbolicNames = FlightParser.symbolicNames;
    }



	vuelo() {
	    let localctx = new VueloContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FlightParser.RULE_vuelo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 12;
	        this.codigo_vuelo();
	        this.state = 13;
	        this.aeropuerto();
	        this.state = 14;
	        this.match(FlightParser.T__0);
	        this.state = 15;
	        this.aeropuerto();
	        this.state = 16;
	        this.hora();
	        this.state = 17;
	        this.match(FlightParser.T__1);
	        this.state = 18;
	        this.estado();
	        this.state = 19;
	        this.match(FlightParser.T__1);
	        this.state = 20;
	        this.match(FlightParser.T__2);
	        this.state = 21;
	        this.puerta();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codigo_vuelo() {
	    let localctx = new Codigo_vueloContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FlightParser.RULE_codigo_vuelo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 23;
	        this.match(FlightParser.LETRA);
	        this.state = 24;
	        this.match(FlightParser.LETRA);
	        this.state = 25;
	        this.match(FlightParser.DIGITO);
	        this.state = 26;
	        this.match(FlightParser.DIGITO);
	        this.state = 27;
	        this.match(FlightParser.DIGITO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aeropuerto() {
	    let localctx = new AeropuertoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FlightParser.RULE_aeropuerto);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29;
	        this.match(FlightParser.LETRA);
	        this.state = 30;
	        this.match(FlightParser.LETRA);
	        this.state = 31;
	        this.match(FlightParser.LETRA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hora() {
	    let localctx = new HoraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FlightParser.RULE_hora);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33;
	        this.match(FlightParser.HORA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	estado() {
	    let localctx = new EstadoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FlightParser.RULE_estado);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 35;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 112) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	puerta() {
	    let localctx = new PuertaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, FlightParser.RULE_puerta);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        this.match(FlightParser.LETRA);
	        this.state = 38;
	        this.match(FlightParser.DIGITO);
	        this.state = 39;
	        this.match(FlightParser.DIGITO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

FlightParser.EOF = antlr4.Token.EOF;
FlightParser.T__0 = 1;
FlightParser.T__1 = 2;
FlightParser.T__2 = 3;
FlightParser.ON_TIME = 4;
FlightParser.DELAYED = 5;
FlightParser.CANCELLED = 6;
FlightParser.HORA = 7;
FlightParser.LETRA = 8;
FlightParser.DIGITO = 9;
FlightParser.WS = 10;

FlightParser.RULE_vuelo = 0;
FlightParser.RULE_codigo_vuelo = 1;
FlightParser.RULE_aeropuerto = 2;
FlightParser.RULE_hora = 3;
FlightParser.RULE_estado = 4;
FlightParser.RULE_puerta = 5;

class VueloContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlightParser.RULE_vuelo;
    }

	codigo_vuelo() {
	    return this.getTypedRuleContext(Codigo_vueloContext,0);
	};

	aeropuerto = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AeropuertoContext);
	    } else {
	        return this.getTypedRuleContext(AeropuertoContext,i);
	    }
	};

	hora() {
	    return this.getTypedRuleContext(HoraContext,0);
	};

	estado() {
	    return this.getTypedRuleContext(EstadoContext,0);
	};

	puerta() {
	    return this.getTypedRuleContext(PuertaContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.enterVuelo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.exitVuelo(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlightVisitor ) {
	        return visitor.visitVuelo(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Codigo_vueloContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlightParser.RULE_codigo_vuelo;
    }

	LETRA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FlightParser.LETRA);
	    } else {
	        return this.getToken(FlightParser.LETRA, i);
	    }
	};


	DIGITO = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FlightParser.DIGITO);
	    } else {
	        return this.getToken(FlightParser.DIGITO, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.enterCodigo_vuelo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.exitCodigo_vuelo(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlightVisitor ) {
	        return visitor.visitCodigo_vuelo(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AeropuertoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlightParser.RULE_aeropuerto;
    }

	LETRA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FlightParser.LETRA);
	    } else {
	        return this.getToken(FlightParser.LETRA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.enterAeropuerto(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.exitAeropuerto(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlightVisitor ) {
	        return visitor.visitAeropuerto(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class HoraContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlightParser.RULE_hora;
    }

	HORA() {
	    return this.getToken(FlightParser.HORA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.enterHora(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.exitHora(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlightVisitor ) {
	        return visitor.visitHora(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class EstadoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlightParser.RULE_estado;
    }

	ON_TIME() {
	    return this.getToken(FlightParser.ON_TIME, 0);
	};

	DELAYED() {
	    return this.getToken(FlightParser.DELAYED, 0);
	};

	CANCELLED() {
	    return this.getToken(FlightParser.CANCELLED, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.enterEstado(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.exitEstado(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlightVisitor ) {
	        return visitor.visitEstado(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PuertaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlightParser.RULE_puerta;
    }

	LETRA() {
	    return this.getToken(FlightParser.LETRA, 0);
	};

	DIGITO = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FlightParser.DIGITO);
	    } else {
	        return this.getToken(FlightParser.DIGITO, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.enterPuerta(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlightListener ) {
	        listener.exitPuerta(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlightVisitor ) {
	        return visitor.visitPuerta(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




FlightParser.VueloContext = VueloContext; 
FlightParser.Codigo_vueloContext = Codigo_vueloContext; 
FlightParser.AeropuertoContext = AeropuertoContext; 
FlightParser.HoraContext = HoraContext; 
FlightParser.EstadoContext = EstadoContext; 
FlightParser.PuertaContext = PuertaContext; 
